Fix home layout on mobile devices

--- a/src/targets/lethbridge/styles/views/HeroBenefits/mobile.less
+++ b/src/targets/lethbridge/styles/views/HeroBenefits/mobile.less
@@ -2,7 +2,21 @@
 .viewport-mobile {
 
   .Home__booking-bar {
-    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    .booking-bar {
+      &.booking-bar__size-small {
+        display: block;
+        .booking-bar__form {
+          width: 100%;
+          .booking-bar__form--guests {
+            width: 45%;
+          }
+        }
+      }
+    }
   }
 
   .mobile-search-button-wrapper {
@@ -66,7 +80,7 @@
     right: 0;
     width: 100%;
     height: 100%;
-    display: none;
+    padding: 0;
   }
 
   .HeroBenefits__benefit {
